# llm-wiki

./: .gitignore  alembic.ini  pyproject.toml
src/llm_wiki/: app.py  config.py
src/llm_wiki/api/: routes.py  schemas.py
src/llm_wiki/db/: models.py  session.py
src/llm_wiki/db/migrations/: env.py
src/llm_wiki/db/migrations/versions/: 45e9720e3e7f_add_knowledge_and_relation_tables.py  5d11cc9a4109_add_embedding_to_chunks.py  b6115f833145_create_sources_documents_chunks.py
src/llm_wiki/modules/answer/: service.py
src/llm_wiki/modules/chunking/: service.py
src/llm_wiki/modules/embedding/: service.py
src/llm_wiki/modules/extraction/: service.py
src/llm_wiki/modules/retrieval/: service.py
web/: package-lock.json
web/src/: App.css  App.tsx  api.ts
web/src/pages/: AskPage.tsx  IngestPage.tsx  KnowledgePage.tsx
